# SanVerse

./: .gitignore  MANIFEST.in  NEW_LAPTOP_SETUP_GUIDE.md  README.md  main.py  pyproject.toml  railway.toml  run.py  santok_cli.py  santok_slm.py  setup.py  soma_cli.py  soma_slm.py  start.py  train_santok_complete.py  train_soma_complete.py
.github/workflows/: python-publish.yml  python-tests.yml
baby_steps/: README.md  test_all_methods.py  test_basic.py  test_complete_pipeline.py
cognitive/: README.md  __init__.py
cognitive/algorithms/: USE_SANTEK_METRICS.py  USE_soma_core_METRICS.py  __init__.py  graph_walker.py  (+7 more)
config/: README.md
data/: README.md
docs/: ADVANCED_FEATURES_INTEGRATION_PLAN.md  ADVANCED_TEST_ANALYSIS.md  ALGORITHMS_DOCUMENTATION.md  ALL_BUGS_FIXED_COMPLETE.md  ALL_BUGS_FIXED_FINAL.md  ALL_BUGS_FOUND.md  ALL_BUGS_LIST.md  ALL_BUGS_LIST_FIX.md  ALL_COMPLETE.md  ALL_FIXES_APPLIED.md  ALL_IMPROVEMENTS_COMPLETE.md  ALL_TODOS_COMPLETE.md  BACKEND_CONNECTION_FIX_COMPLETE.md  BRUTAL_COMPARISON.md  BUGS_FIXED.md  BUGS_FIXED_SUMMARY.md  BUGS_LIST.md  BUG_FIXES_COMPLETE.md  BUG_REPORT_SUMMARY.md  CODE_IMPROVEMENTS_SUMMARY.md  CODE_LOCATIONS.md  CODE_QUALITY_CHECKLIST.md  COMPLETE_BUGS_LIST.md  COMPLETE_BUG_LIST.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_PYTHON_BUG_LIST.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_CODE_SCAN_REPORT.md  COMPREHENSIVE_COMPARISON.md  COMPREHENSIVE_COMPARISON_SANTOK_VS_TOKENIZERS.md  COMPREHENSIVE_COMPARISON_SANTOK_VS_TRANSFORMERS.md  CORS_FIX_RAILWAY.md  DEMO_FOLDER_READY.md  DEMO_READY_CONFIRMATION.md  DEPENDENCIES_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DETAILED_BUG_LIST.md  (+90 more)
examples/: README.md  compare_neighbors.py  comprehensive_vector_store_example.py  comprehensive_vector_store_example2.py  demo_core.py  demo_structure.py  embedding_example.py  eval_embedding_quality.py  guided_training_demo.py  integrate_source_map_workflow.py  integration_with_transformers.py  quick_start_integration.py  santok_with_tiny_slm.py  search_examples.py  simple_tiny_slm.py  soma_with_tiny_slm.py  test_data_interpreter.py  test_full_workflow_500k.py  test_santok_source_map.py  train_santok_60k_vocab.py  train_semantic_embeddings.py  use_semantic_embeddings.py  use_vector_store.py
models/: README.md  soma_60k_vocab.json
railway/: DEPLOY_ALL.ps1  DEPLOY_ALL.sh  ENV_VARS_TEMPLATE.txt  Procfile  README.md  deploy.ps1  deploy.sh  railway.json
real_training_data/: README.md
santek_core/: README.md  embeddings.py  pattern_builder.py  similarity.py  simple_metrics.py  structure_hierarchy.py  symbol_structures.py  token_record.py  tokenizer.py  train_embeddings.py
santok/: README.md  __init__.py  cli.py  santok.py
scripts/: README.md  test_vocabulary_adapter.bat  test_vocabulary_adapter.sh
semantic_trainer/: README.md  __init__.py  enhanced_trainer.py  example_train.py  example_use.py
soma/: README.md  __init__.py  cli.py  soma.py
soma_core/: README.md  embeddings.py  pattern_builder.py  similarity.py  simple_metrics.py  structure_hierarchy.py  symbol_structures.py  token_record.py  tokenizer.py  train_embeddings.py
src/: README.md  __init__.py  santok_sources.py
tests/: README.md  test_vocabulary_adapter_backend.py
training_data/: README.md  combined_training_data.txt
vector_db/: README.md  chroma.sqlite3
vector_db_example/: README.md
weaviate_codes/: README.md  __init__.py  example_usage.py  test_connection.py  weaviate_vector_store.py
(+275 files in other folders)
