[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma"
version = "1.0.1"
authors = [
    { name = "Santosh Chavala", email = "chavalasantosh@gmail.com" }
]
description = "SOMA - Advanced Tokenization & Intelligence Framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["soma", "tokenization", "nlp", "embeddings", "intelligence"]
dependencies = []

[project.scripts]
soma = "soma_cli:main"

[project.urls]
Homepage = "https://github.com/chavalasantosh/SanVerse"
Documentation = "https://github.com/chavalasantosh/SanVerse#readme"
Repository = "https://github.com/chavalasantosh/SanVerse.git"
Issues = "https://github.com/chavalasantosh/SanVerse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["soma*", "src*", "cognitive*", "soma_core*", "semantic_trainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
